--- a/productcatalogmanagement.client/package.json
+++ b/productcatalogmanagement.client/package.json
@@ -22,6 +22,13 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
     "@angular/router": "^17.0.0",
+    "@ngrx/component-store": "^17.2.0",
+    "@ngrx/data": "^17.2.0",
+    "@ngrx/effects": "^17.2.0",
+    "@ngrx/entity": "^17.2.0",
+    "@ngrx/router-store": "^17.2.0",
+    "@ngrx/store": "^17.2.0",
+    "@ngrx/store-devtools": "^17.2.0",
     "jest-editor-support": "*",
     "run-script-os": "*",
     "rxjs": "~7.8.0",
@@ -31,6 +38,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.0.2",
     "@angular/compiler-cli": "^17.0.0",
+    "@ngrx/schematics": "^17.2.0",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
